k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-test
  template:
    metadata:
      labels:
        app: python-test
    spec:
      containers:
      - name: python-test
        image: przekem/test:v0.0.3
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
