k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-test
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.50.151
  selector:
    app: python-test
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
