k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-test
  labels:
    name: python-test
spec:
  ingressClassName: python-test-class
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-test
            port:
              number: 80
